<!--Norwegians Strings default-->
<resources>
    <string name="app_name">NyhetsApp</string>
    <!--Start screen-->
    <string name="login">Login</string>
    <string name="register">Registrer</string>
    <string name="skip">Hopp over</string>
    <string name="logo">Logo</string>
    <string name="password">Passord</string>
    <string name="re_password">Skriv inn passord på nytt</string>
    <string name="username">Brukernavn</string>
    <string name="confirm">Bekreft</string>
    <string name="account">Bruker</string>
    <string name="settings">Innstillinger</string>
    <string name="theme">Tema</string>
    <string name="logout">Logg ut</string>
    <!--Main Fragment-->
    <string name="search">Søk</string>
    <string name="NRK">NRK</string>
    <string name="VG">VG</string>
    <string name="new_">Ny</string>
    <string name="saved">Lagret</string>
    <string name="comments">Kommentarer</string>
    <!--Settings/theme/account-->
    <string name="darkmode">Mørkmodus</string>
    <string name="my_account">Min bruker</string>
    <string name="back">Tilbake</string>
    <string name="reset_password">Reset passord</string>
    <!--List placeholder-->
    <string name="description">Beskrivelse</string>
    <string name="title">Tittel</string>
    <string name="source">Kilde</string>
    <string name="thumbnail">Miniatyrbilde</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>