<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.example.nyhetsapp.StartFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_start" >
        <action
            android:id="@+id/action_startFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_startFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_startFragment_to_mainFragment"
            app:destination="@id/mainFragment"
            app:popUpTo="@id/nav_graph" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.nyhetsapp.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.nyhetsapp.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.nyhetsapp.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_mainFragment_to_accountFragment"
            app:destination="@id/accountFragment" />
        <action
            android:id="@+id/action_mainFragment_to_themeFragment"
            app:destination="@id/themeFragment" />
        <action
            android:id="@+id/action_mainFragment_to_startFragment"
            app:destination="@id/startFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.nyhetsapp.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.nyhetsapp.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/themeFragment"
        android:name="com.example.nyhetsapp.ThemeFragment"
        android:label="@string/theme"
        tools:layout="@layout/fragment_theme" />
</navigation>